--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,73 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+#main {
+  max-width: 60%;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+}
+#heading {
+  text-align: center;
+}
+
+#error-box {
+  text-align: center;
+  color: rgb(150, 150, 150);
+  font-weight: 700;
+  font-size: 18;
+}
+
+th,
+td {
+  border-collapse: collapse;
+}
+
+table {
+  width: 100%;
+  text-align: center;
+}
+tbody {
+  padding: 10px;
+}
+th {
+  background-color: rgb(181, 239, 200);
+  border-radius: 5px;
+}
+td {
+  background-color: rgba(0, 0, 0, 0.03);
+  /* border-radius: 10px; */
+  margin-top: 5px;
+}
+td,
+th {
+  padding: 10px;
+}
+
+#url-input {
+  outline: none;
+  border: 1px solid rgb(215, 215, 215);
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+#submit-button {
+  outline: none;
+  border: none;
+  margin-top: 20px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  background-color: rgb(113, 198, 141);
+  color: white;
+}
+.disabled-button {
+  background-color: rgba(113, 198, 141, 0.5) !important;
+}
+
+#table-div {
+  margin-top: 20px;
+  text-align: center;
+  overflow-x: auto;
 }
