--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,8 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 #main {
@@ -10,39 +13,7 @@
 }
 #heading {
   text-align: center;
-}
-
-#error-box {
-  text-align: center;
-  color: rgb(150, 150, 150);
-  font-weight: 700;
-  font-size: 18;
-}
-
-th,
-td {
-  border-collapse: collapse;
-}
-
-table {
-  width: 100%;
-  text-align: center;
-}
-tbody {
-  padding: 10px;
-}
-th {
-  background-color: rgb(181, 239, 200);
-  border-radius: 5px;
-}
-td {
-  background-color: rgba(0, 0, 0, 0.03);
-  /* border-radius: 10px; */
-  margin-top: 5px;
-}
-td,
-th {
-  padding: 10px;
+  margin: 20px 0px;
 }
 
 #url-input {
@@ -51,6 +22,7 @@ th {
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
   padding: 10px 20px;
+  margin-top: 20px;
 }
 #submit-button {
   outline: none;
@@ -66,8 +38,77 @@ th {
   background-color: rgba(113, 198, 141, 0.5) !important;
 }
 
-#table-div {
-  margin-top: 20px;
+#error-box {
   text-align: center;
-  overflow-x: auto;
+  color: rgb(150, 150, 150);
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.table-wrapper {
+  width: 100%;
+}
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px auto;
+}
+
+.table td,
+.table th {
+  padding: 12px 15px;
+  border: 1px solid #ddd;
+  text-align: center;
+  font-size: 16px;
+}
+
+.table th {
+  background-color: rgba(113, 198, 141, 0.9);
+  color: #ffffff;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: rgba(113, 198, 141, 0.5);
+}
+@media screen and (max-width: 700px) {
+  #main {
+    max-width: 90%;
+  }
+
+  .table thead {
+    display: none;
+  }
+
+  .table,
+  .table tbody,
+  .table tr,
+  .table td {
+    display: block;
+    width: 100%;
+  }
+  .table tr {
+    margin-bottom: 15px;
+  }
+  .table td {
+    padding-left: 50%;
+    text-align: left;
+    position: relative;
+  }
+  .table td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 0;
+    width: 50%;
+    padding-left: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  #main {
+    max-width: 80%;
+  }
 }
